# SBC-Queens-SIPMs-GUI-Software

./: .clang-tidy  .gitignore  .gitmodules  CAENDigitizerInterface.h  CAENDigitizerInterface.hpp  CMakeLists.txt  GUIManager.cpp  GUIManager.h  GUIManager.hpp  OtherDevicesInterface.h  Preferences.sublime-settings  README.md  README.txt  Setting Up SublimeText for C++ in WINDOWS.txt  SlowDAQInterface.hpp  TeensyControllerInterface.cpp  TeensyControllerInterface.h  TeensyControllerInterface.hpp  amplifier_cal_noresistor_10Vout_10Vin.csv  cal.py  gui_setup.toml  main.cpp  sipm_control_gui.sublime-project  sipm_control_gui.sublime-workspace
Teensy41-Controller-Board/include/: SBCQueensTeensyBasics.h  SBCQueensTeensyHardware.h
Teensy41-Controller-Board/src/: SBCQueensPID.cpp  SBCQueensTeensyBasics.cpp  SBCQueensTeensyHardware.cpp
Teensy41-Controller-Board/src/Drivers/: SBCQueensBME280Driver.cpp
all/: CMakeLists.txt
calibration/: CalibrationCalculations.ipynb  KEITHLEY6487_50VOUT_500VRANGE.txt  amplifier_cal_resistor_10Vout_10Vin.csv  cal.py  keithley2000_100Vrange_cal_500Vrangeout.csv  keithley2000_10Vrange_ca_10Vrangeoutl.csv
cmake/: CompilerWarnings.cmake  Dependencies.cmake  ImGUIDependencies.cmake
include/: armadillo_helpers.hpp  caen_helper.h  caen_helper.hpp  file_helpers.h  file_helpers.hpp  imgui_helpers.h  imgui_helpers.hpp  implot_helpers.h  implot_helpers.hpp  indicators.h  indicators.hpp  serial_helper.h  serial_helper.hpp  timing_events.h
include/GUI/: CAENTabs.h  CAENTabs.hpp  ControlWindow.h  ControlWindow.hpp  IndicatorWindow.h  IndicatorWindow.hpp  SiPMControlWindow.hpp  TeensyTabs.h  TeensyTabs.hpp
include/HardwareHelpers/: Calibration.hpp  ClientController.hpp
include/rendering_wrappers/: glfw_vulkan_wrapper.h
include/sbcqueens-gui/: armadillo_helpers.hpp  caen_helper.hpp  file_helpers.hpp  imgui_helpers.hpp  implot_helpers.hpp  indicators.hpp  logger_helpers.hpp  serial_helper.hpp  timing_events.hpp
include/sbcqueens-gui/gui_windows/: CAENGeneralConfigTab.hpp  CAENPerGroupConfigTab.hpp  CAENTabs.hpp  CAENTriggerConfigTab.hpp  ControlList.hpp  ControlWindow.hpp  IndicatorList.hpp  IndicatorWindow.hpp  OtherSmallTabs.hpp  RunTab.hpp  SiPMControlWindow.hpp  TeensyTab.hpp  TeensyTabs.hpp  Window.hpp
include/sbcqueens-gui/hardware_helpers/: CAENDigitizerInterface.hpp  CAENInterfaceData.hpp  Calibration.hpp  ClientController.hpp  GUIManager.hpp  SiPMAcquisitionData.hpp  SiPMAcquisitionManager.hpp  SlowDAQData.hpp  SlowDAQInterface.hpp  SlowDAQManager.hpp  TeensyControllerData.hpp  TeensyControllerInterface.hpp  TeensyControllerManager.hpp
include/sbcqueens-gui/multithreading_helpers/: Pipe.hpp  ThreadManager.hpp
include/sbcqueens-gui/rendering_wrappers/: glfw_opengl3_wrapper.h  glfw_vulkan_wrapper.h
include/sbcqueens-gui/sipm_helpers/: AcquisitionRoutine.hpp  AcquisitonRoutine.hpp  BreakDownRoutine.hpp  SBCBinaryFormat.hpp
src/: armadillo_helpers.cpp  caen_helper.cpp  imgui_helpers.cpp  serial_helper.cpp
src/GUI/: CAENTabs.cpp  ControlWindow.cpp  IndicatorWindow.cpp  SiPMControlWindow.cpp  TeensyTabs.cpp
src/HardwareHelpers/: Calibration.cpp
src/gui_windows/: CAENGeneralConfigTab.cpp  CAENPerGroupConfigTab.cpp  CAENTabs.cpp  CAENTriggerConfigTab.cpp  ControlWindow.cpp  IndicatorWindow.cpp  OtherSmallTabs.cpp  RunTab.cpp  SiPMControlWindow.cpp  TeensyTab.cpp  TeensyTabs.cpp
src/hardware_helpers/: Calibration.cpp  TeensyControllerInterface.cpp  TeensyControllerManager.cpp
src/rendering_wrappers/: glfw_vulkan_wrapper.cpp
src/sipm_helpers/: AcquisitionRoutine.cpp  BreakDownRoutine.cpp
standalone/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  async_file_saver_test.cpp  caen_file_test.cpp  test.txt  test_readbinary.py
test/source/: gui_test.cpp
